# larana

./: CMakeLists.txt  altCMakeLists.cmake
Calorimetry/: CMakeLists.txt  altCMakeLists.cmake
CosmicRemoval/: CMakeLists.txt  altCMakeLists.cmake
CrossSectionUncertainty/: CMakeLists.txt  GenieReweightGenerator.fcl  GenieReweightGenerator_module.cc  genieRW.fcl
CrossSectionUncertainty/alg/: CMakeLists.txt  GenieReweightGeneratorAlg.cxx  GenieReweightGeneratorAlg.h
Modules/: laranaConfig.cmake.in
OpticalDetector/: CMakeLists.txt  LAr1NDOpDetResponse_service.cc  LariatOpDetResponse_service.cc  MicrobooneOpDetResponse.h  OpFlashAna_module.cc  SimPhotonCounter_module.cc  TrackPMTLHD_module.cc  altCMakeLists.cmake  opticaldetectormodules.fcl  opticaldetectormodules_lariat.fcl  trackflashlhd.fcl
ParticleIdentification/: CMakeLists.txt  altCMakeLists.cmake
cmakeConfig/: CMakeLists.txt  larana-fragment.cmake.in
larana/: CMakeLists.txt
larana/CosmicRemoval/: CMakeLists.txt  CRHitRemovalByTrack_module.cc  CRHitRemoval_module.cc  CosmicPFParticleTagger_module.cc  CosmicTaggerEfficiency_module.cc  CosmicTrackTagger_module.cc  NeutrinoPFParticleTagger_module.cc  cosmicremovalmodules.fcl
larana/OpticalDetector/: CMakeLists.txt  DefaultOpDetResponse.h  MicrobooneOpDetResponse.h  OpMCDigi_module.cc  SimPhotonCounterAlg.cxx  SimPhotonCounter_module.cc  opticaldetectormodules.fcl
larana/ParticleIdentification/: CCNCTreeMaker_module.cc  CMakeLists.txt  Chi2PIDAlg.cxx  Chi2PIDAlg.h  DeePIDTreeMaker_module.cc  (+11 more)
test/: CMakeLists.txt  altCMakeLists.cmake
ups/: product_deps
(+29 files in other folders)
